--- a/index.html
+++ b/index.html
@@ -2,16 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,
+     initial-scale=1.0">
     <title>Hola Mundo</title>
 </head>
 <body>
-    <video poster="/Assets/img/HTML5.png" controls autoplay loop>
-        <source src="/Assets/videos/HTML_course.mp4" type="video/mp4">
-      </video>
-
-      <audio controls>
-        <source src="/Assets/audio/Subwoofer Lullaby.mp3" type="audio/mp3">
-      </audio>
+  <p>Hola Mundo</p>
 </body>
 </html>
